[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Alkhemikal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui_themes/dialogue_choice_container_style.tres" type="Theme" id=2]
[ext_resource path="res://ui/SpeakerTextLabelContainer.gd" type="Script" id=3]
[ext_resource path="res://ui/DialogueUI.gd" type="Script" id=4]
[ext_resource path="res://images/portrait_draft.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 1
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="DialogueUI" type="Control"]
margin_left = 118.0
margin_top = 475.0
margin_right = 160.0
margin_bottom = 519.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueCharacterPortrait" type="Sprite" parent="."]
position = Vector2( 85.4568, 37.3755 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 5 )

[node name="DialogueBackground" type="ColorRect" parent="."]
margin_top = -38.991
margin_right = 1040.0
margin_bottom = 223.009
color = Color( 0.0745098, 0.0509804, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="Label" parent="DialogueBackground"]
margin_left = 25.0
margin_top = 27.1581
margin_right = 900.0
margin_bottom = 130.158
custom_fonts/font = SubResource( 1 )
text = "This is where the normal dialogue text goes."
autowrap = true

[node name="SpeakerTextLabelContainer" type="ColorRect" parent="DialogueBackground"]
margin_left = -35.0
margin_top = -24.0
margin_right = 5.0
margin_bottom = 16.0
color = Color( 0.317647, 0, 0.329412, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerName" type="Label" parent="DialogueBackground/SpeakerTextLabelContainer"]
margin_left = 2.45386
margin_top = -0.938477
margin_right = 224.454
margin_bottom = 40.0615
custom_fonts/font = SubResource( 2 )
text = "SPEAKER NAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueBackground"]
margin_left = 31.0
margin_top = 127.0
margin_right = 1004.0
margin_bottom = 249.0
theme = ExtResource( 2 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "I'm assuming we don't get many dialogue choices...

(Supports a max of four without looking stupid.)

We can always change this though."
}

[node name="Button" type="Button" parent="DialogueBackground/ChoicesContainer"]
margin_right = 973.0
margin_bottom = 24.0
text = "Hi Son"
align = 0

[node name="Button2" type="Button" parent="DialogueBackground/ChoicesContainer"]
margin_top = 26.0
margin_right = 973.0
margin_bottom = 50.0
text = "Hi Son"
align = 0

[node name="Button3" type="Button" parent="DialogueBackground/ChoicesContainer"]
margin_top = 52.0
margin_right = 973.0
margin_bottom = 76.0
text = "Hi Son"
align = 0

[node name="Button4" type="Button" parent="DialogueBackground/ChoicesContainer"]
margin_top = 78.0
margin_right = 973.0
margin_bottom = 102.0
text = "Hi Son"
align = 0

[node name="ContinuePrompt" type="Button" parent="DialogueBackground"]
margin_left = 773.757
margin_top = 210.49
margin_right = 1015.76
margin_bottom = 252.49
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.933333, 0.164706, 1 )
text = "Continue..."
flat = true
